import {join} from 'node:path';

import {resetActiveProject} from 'ng-morph';

import {createMigration} from '../../../utils/run-migration';

describe('ng-update', () => {
    const migrate = createMigration({
        collection: join(__dirname, '../../../migration.json'),
    });

    it(
        'migrate TuiInputDateModule to TuiInputDate',
        migrate({
            component: `
                import {TuiInputDateModule} from '@taiga-ui/legacy';

                @Component({
                  standalone: true,
                  imports: [TuiInputDateModule],
                  templateUrl: './test.html',
                })
                export class MyComponent {}
            `,
            template: `
                <tui-input-date>
                </tui-input-date>

                <tui-input-date
                    [formControl]="control"
                    [tuiTextfieldCleaner]="true"
                >
                    Choose a date
                    <input
                        tuiTextfieldLegacy
                    />
                </tui-input-date>

                <tui-input-date
                    formControlName="date"
                >
                    Pick date
                </tui-input-date>

                <tui-input-date
                    [(ngModel)]="value"
                >
                    Date
                </tui-input-date>
            `,
        }),
    );

    it(
        'moves [min] and [max] to <input tuiInputDate>',
        migrate({
            template: `
<tui-input-date
    [min]="minDate"
    [max]="maxDate"
    formControlName="date"
>
    Date
</tui-input-date>`,
        }),
    );

    it(
        'moves [disabledItemHandler] and [markerHandler] to <tui-calendar *tuiDropdown>',
        migrate({
            template: `
<tui-input-date
    [disabledItemHandler]="disabledHandler"
    [markerHandler]="markerHandler"
    formControlName="date"
>
    Date
</tui-input-date>`,
        }),
    );

    it(
        'adds TODO for [items] and [defaultActiveYearMonth]',
        migrate({
            template: `
<tui-input-date
    [items]="namedDays"
    [defaultActiveYearMonth]="initialMonth"
    formControlName="date"
>
    Date
</tui-input-date>`,
        }),
    );

    afterEach(() => resetActiveProject());
});
